changing css fixing jump-to-top

--- a/web/src/main/webapp/css/tdar-base.css
+++ b/web/src/main/webapp/css/tdar-base.css
@@ -26,7 +26,7 @@ input[autocomplete="off"]::-webkit-contacts-auto-fill-button {
     width: 1px;
     height: 1px;
     right: 0;
-    top: 0;
+/*     top: 0; */
     transform: translate(-300px, 0) scale(4);
 }
 
